--- a/templates/templ.html
+++ b/templates/templ.html
@@ -1,4 +1,4 @@
 <html>
-	<head><title> This is my flask app. </title></head>
-	<body><h1> HELLO from Flask.</h1></body>
+	<head><title> This is my flask app.</title></head>
+	<body><h1> HELLO from Flask! </h1></body>
 </html>
